Fixed layout issue o sportive template

--- a/app/themes/mcc-cycling/assets/less/partials/sportive.less
+++ b/app/themes/mcc-cycling/assets/less/partials/sportive.less
@@ -42,6 +42,14 @@ body.page-template-template-sportive-php {
         margin-left: 0;
         margin-right: 0;
       }
+
+      @media (min-width: @screen-md-min) {
+        .summary {
+          h2 {
+            margin-top: 0;
+          }
+        }
+      }
     }
   }
 }
